# Demo_Home_Page_Raspberry_PI

./: .dockerignore  .env.sample  .gitignore  Caddyfile  Dockerfile  README.md  Readme.md  app.py  compose.yml  enable_podman_autostart.sh  kk.py  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: clean-deploy.yml  main.yml  restart-deploy.yml  rolling-release.yml  update_caddy.yml
templates/: index.html
