[project]
name = "demo-home-page-raspberry-pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aniso8601==9.0.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-restful==0.3.10",
    "gunicorn>=25.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "pytz==2024.2",
    "six==1.17.0",
    "werkzeug==3.1.3",
]
